# evals-server

./: .gitignore  README.md  pyproject.toml
src/factory/evals/: __init__.py  core.py  interface.py  server.py
src/factory/evals/mcp/: __init__.py  deterministic.py  docs.py  evaluator_tools.py  experiment_tools.py  operational.py  prompts.py  resources.py  serialization_tools.py  simulation_tools.py  sop_tools.py  templates.py  ui_explorer_tools.py  ui_scenario_tools.py
src/factory/evals/runtime/: __init__.py  ports.py  runtime.py
src/factory/evals/runtime/adapters/: __init__.py  agent_task.py  custom_adapter.py  evaluator_adapter.py  evaluator_catalog.py  evaluator_factory.py  experiment_runner.py  serialization_adapter.py  simulator_adapter.py  sop_adapter.py  sop_report.py  strands_adapter.py  ui_explorer.py
src/factory/evals/runtime/ui/: __init__.py  assertion_base.py  assertions.py  reporters.py  scenarios.py
src/factory/mcp_utils/: __init__.py  decorators.py  interface.py  serialization.py  tools.py
