[project]
name = "evals-server"
version = "2.0.0"
description = "Strands Evals MCP Server - Agent benchmarking and evaluation with 12 LLMAJ evaluators"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.1.0",
    "strands-agents>=1.23.0",
    "strands-agents-evals>=0.1.6",
]

[project.scripts]
evals-server = "factory.evals.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/factory"]
